--- a/docs/lab/overview/quickstart.mdx
+++ b/docs/lab/overview/quickstart.mdx
@@ -2,7 +2,7 @@
 title: "Quickstart"
 ---
 
-We have carefully designed Vital's API to ensure a seamless and hassle-free experience for developers. Integrating with our API is incredibly easy and fast, enabling you to leverage our powerful features with just a few lines of code. In this guide, we will walk you through the essential steps to get up and running in no time. Let's jump right in and unlock the full potential of our API!
+We have carefully designed Vital’s API to ensure a seamless and hassle-free experience for developers. You can get up and running with just a few lines of code. In this guide, we will walk you through the essential steps to order your first lab test.
 
 ### What you need
 
@@ -101,7 +101,7 @@ You can then use the test `id` when creating an order.
 
 ### (3) Placing an order
 
-Ordering a test for your user, is as simple as making an API call:
+Ordering a test for your user is as simple as making an API call:
 
 <SnippetGroup>
 
@@ -282,4 +282,4 @@ order = await client.LabTests.create_order(
 }
 ```
 
-As demonstrated in this Quickstart Guide, integrating with our API is incredibly straightforward, allowing you to access a wide range of lab tests with minimal effort. Placing an order for a lab test is as simple as making a request to the appropriate endpoint. With our user-friendly design and clear documentation, you can now harness the power of our clinical test API to enhance your application and deliver a seamless experience to your users.
+As demonstrated in this Quickstart Guide, integrating with our API is straightforward, allowing you to access a wide range of lab tests with minimal effort. Placing an order for a lab test is as simple as making a request to the appropriate endpoint. With our user-friendly design and clear documentation, you can harness the power of our clinical test API to enhance your application and deliver a seamless experience to your users.
