--- a/docs/api-reference/user/deregister-a-provider.mdx
+++ b/docs/api-reference/user/deregister-a-provider.mdx
@@ -7,17 +7,17 @@ openapi: "DELETE /v2/user/{user_id}/{provider}"
 
 ```bash Shell
 curl --request DELETE \
-     --url {{BASE_URL}}/v2/user/{user_id}/provider \
+     --url {{BASE_URL}}/v2/user/{user_id}/{provider} \
      --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
 ```js JavaScript
-const user = await client.User.deregisterProvider(user_id);
+const user = await client.User.deregisterProvider(user_id, provider);
 ```
 
 ```python Python
-user = client.User.deregister_provider(user_id)
+user = client.User.deregister_provider(user_id, provider)
 ```
 
 </RequestExample>
