--- a/docs/wearables/providers/guides/garmin.mdx
+++ b/docs/wearables/providers/guides/garmin.mdx
@@ -34,4 +34,4 @@ On successful connection, you will receive:
 
 ## Deregistering
 
-In order to receive a new historical backfill, for an existing connected source, you need to [deregister](/api-reference/user/deregister-a-provider) first. This is unique to Garmin. For other providers you can reconnect a user to an existing account and a new backfill is triggered.
+In order to receive a new historical backfill, for an existing connected source, you need to first [deregister](/api-reference/user/deregister-a-provider) before reconnecting the user via the Garmin OAuth flow or Vital Link. This is unique to Garmin. For other providers, you can reconnect a user to an existing account and a new historical backfill is triggered.
