--- a/docs/api-details/data_flow.mdx
+++ b/docs/api-details/data_flow.mdx
@@ -17,7 +17,7 @@ be retrieved from our database. For other providers, Vital will pull data from
 the provider's API on a schedule, multiple times a day. If new data is available,
 Vital will process it and send a Webhook event to you.
 
-To get more details of which provider's see the [Provider's Guide]().
+To get more details of which provider's see the [Provider's Guide](/wearables/providers/introduction).
 
 For some user's they want near real-time data updates. We provider a [`refresh`]() API endpoint
 that will allow you to request a refresh of the data for a user at any point in time.
