at-home phlebotomy doc update: remove 'location' parameter from cURL example call in /book and /reschedule

--- a/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-rescheduling.mdx
+++ b/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-rescheduling.mdx
@@ -10,11 +10,7 @@ curl --request PATCH \
      --header 'x-vital-api-key: {YOUR_KEY}' \
      --data '
 {
-    "booking_key": "bar456",
-    "location": {
-        "lng": -112.0772235,
-        "lat": 33.4421912
-    }
+    "booking_key": "bar456"
 }
 '
 ```
