--- a/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-booking.mdx
+++ b/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-booking.mdx
@@ -10,11 +10,7 @@ curl --request POST \
      --header 'x-vital-api-key: {YOUR_KEY}' \
      --data '
 {
-    "booking_key": "foo123",
-    "location": {
-        "lng": -112.0772235,
-        "lat": 33.4421912
-    }
+    "booking_key": "foo123"
 }
 '
 ```
