--- a/docs/webhooks/event-structure.mdx
+++ b/docs/webhooks/event-structure.mdx
@@ -7,7 +7,7 @@ All our webhook events have the following standard structure:
 * A top-level `event_type` field, specifying the payload type contained in the `data` field.
 * A top-level `data` field containing the event-specific payload.
 
-Schemas and examples are available through the Event Catalog tab in the Webhooks section of our Web app.
+Schemas and examples are available through [the Event Catalog tab in the Webhooks section of our Web app](https://app.tryvital.io).
 
 <CodeGroup>
 ```json Basic event structure
