Fix link to lab testing section

--- a/docs/home/welcome.mdx
+++ b/docs/home/welcome.mdx
@@ -35,7 +35,7 @@ description: "Here you'll find guides, resources, and references to build using 
     title="Labs and Test Kits"
     icon="flask"
     color="#BF40BF"
-    href="/lab/home/introduction"
+    href="/lab/overview/introduction"
   >
     Vital’s lab test API allows digital health companies to carry out at-home
     lab testing. Companies can use the API to order a variety of tests, using
